# OpenGL

./: README.md
programas/: animacao.c  braco_garra.c  braco_garra_3d.c  bresenham_circunferencia.c  bresenham_linha.c  iluminacao2.c  nome.c  quadrado.c  quadrados4.c  quadradoscolor.c  selecao.c  selecao_buffer.c  splinesnurbs.c  tiposdeprojecoes.c
visualizador de espectro/: CMakeLists.txt  README.md  spectrosdl.cpp  vcpkg.json
